--- a/index.html
+++ b/index.html
@@ -25,259 +25,260 @@
     </section>
 
     <section class="main-content">
-      <h2 id="简体中文使用说明">#简体中文使用说明</h2>
-<p>##支持情况</p>
-
+      <h3 id="简体中文使用说明">简体中文使用说明</h3>
+<hr>
+<h4 id="支持情况">支持情况</h4>
 <table>
-  <thead>
-    <tr>
-      <th style="text-align: center">功能 版本号</th>
-      <th style="text-align: center">自动保存</th>
-      <th style="text-align: center">禁用Alt菜单键</th>
-      <th style="text-align: center">HUD拾色器增强</th>
-      <th style="text-align: center">前景拾色器快捷键</th>
-      <th style="text-align: center">修改笔刷范围</th>
-      <th style="text-align: center">快速创建新图层</th>
-      <th style="text-align: center">3DSMax贴图同步</th>
-      <th style="text-align: center">修改撤销/重做快捷键</th>
-      <th style="text-align: center">自动/双击托盘启动Photoshop</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td style="text-align: center"><strong>CC</strong></td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">☀</td>
-      <td style="text-align: center">☀</td>
-      <td style="text-align: center">☀</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><strong>CS6</strong></td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">☀</td>
-      <td style="text-align: center">☀</td>
-      <td style="text-align: center">☀</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><strong>CS5</strong></td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">☀</td>
-      <td style="text-align: center">☀</td>
-      <td style="text-align: center">☀</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><strong>CS4</strong></td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">/</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">☀</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><strong>CS3</strong></td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">/</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><strong>CS2</strong></td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">/</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><strong>CS</strong></td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">/</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><strong>7</strong></td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">/</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-    </tr>
-    <tr>
-      <td style="text-align: center"><strong>6</strong></td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">/</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">○</td>
-      <td style="text-align: center">×</td>
-    </tr>
-  </tbody>
+<thead>
+<tr>
+<th style="text-align:center;">功能 \ 版本号</th>
+<th style="text-align:center;"> CC</th>
+<th style="text-align:center;">CS6</th>
+<th style="text-align:center;">CS5</th>
+<th style="text-align:center;">CS4</th>
+<th style="text-align:center;">CS3</th>
+<th style="text-align:center;">CS2</th>
+<th style="text-align:center;">CS</th>
+<th style="text-align:center;">7</th>
+<th style="text-align:center;">6</th>
+<th style="text-align:center;"><img src="https://helpx.adobe.com/content/dam/help/mnemonics/ai_cc_app_RGB.svg" alt="Illustrator"></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center;"><strong> 禁用 Alt 菜单键</strong></td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+</tr>
+<tr>
+<td style="text-align:center;"><strong>自动保存</strong></td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">🤢</td>
+</tr>
+<tr>
+<td style="text-align:center;"><strong>HUD 拾色器增强</strong></td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">🤢</td>
+</tr>
+<tr>
+<td style="text-align:center;"><strong>前景拾色器快捷键</strong></td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🤢</td>
+</tr>
+<tr>
+<td style="text-align:center;"><strong>快速创建新图层</strong></td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">🤢</td>
+</tr>
+<tr>
+<td style="text-align:center;"><strong>3DSMax 贴图同步</strong></td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🙂</td>
+<td style="text-align:center;">🤢</td>
+</tr>
+<tr>
+<td style="text-align:center;"><strong>修改撤销 / 重做快捷键</strong></td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">🤢</td>
+</tr>
+<tr>
+<td style="text-align:center;"><strong>修改笔刷范围</strong></td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+</tr>
+<tr>
+<td style="text-align:center;"><strong>自动启动 Photoshop</strong></td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+<td style="text-align:center;">🤢</td>
+</tr>
+<tr>
+<td style="text-align:center;"><strong><a href="https://helpx.adobe.com/cn/photoshop/kb/enable-optional-extensions-photoshop-cc.html" title="按住 Ctrl 点击在新标签打开">可选扩展界面</a></strong></td>
+<td style="text-align:center;">😃</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+<td style="text-align:center;">💀</td>
+</tr>
+</tbody>
 </table>
-
-<ul>
-  <li>/ 无此功能</li>
-  <li>× 不支持</li>
-  <li>○ 支持</li>
-  <li>☀ 完美支持</li>
-</ul>
-
-<p><em>CS3 因不明原因无法完美支持前景拾色器相关功能，查证中</em></p>
-
-<hr />
-<p>##详细说明</p>
-<h3 id="1hud-拾色器增强">1.HUD 拾色器增强</h3>
+<p>😃 完美支持 | 🙂 支持 | 🤢 不支持 | 💀 无此功能 |</p>
+<p>*<em>CS3 因不明原因无法完美支持前景拾色器相关功能，查证中</em></p>
+<hr>
+<h4 id="详细说明">详细说明</h4>
+<h5 id="1hud-拾色器增强">1.HUD 拾色器增强</h5>
 <p>此功能只适用于 Photoshop CS5 及以上版本，需在 首选项 中打开 OpenGL 支持方可使用。
-打开OpenGL方法：</p>
-
+打开 OpenGL 方法：</p>
 <blockquote>
   <p>编辑——首选项——性能——启用 OpenGL 绘图</p>
 </blockquote>
-
-<p>部分显卡不支持此选项（复选框为灰色），可尝试修改注册表或升级显卡驱动（或换显卡……）。
-<strong>精确</strong>
-勾选“精确”将不需要按住空格键切换选色区域。前景拾色器将自动识别。
-<strong>中心</strong>
+<p>部分显卡不支持此选项（复选框为灰色），可尝试修改注册表或升级显卡驱动（或换显卡……）。</p>
+<p><strong>精确</strong>
+勾选“精确”将不需要按住空格键切换选色区域。前景拾色器将自动识别。</p>
+<p><strong>中心</strong>
 勾选“中心”将自动定位到屏幕中心显示 HUD 拾色器。</p>
-
-<h3 id="2前景拾色器快捷键">2.前景拾色器快捷键</h3>
+<h5 id="2前景拾色器快捷键">2.前景拾色器快捷键</h5>
 <p>Photoshop CS5 及以上版本先至以下位置修改键盘快捷键：</p>
-
 <blockquote>
   <p>键盘快捷键和菜单——快捷键用于（工具）——前景拾色器</p>
 </blockquote>
-
 <p>Photoshop CS4 及其以前版本（最低至 Photoshop 6）请至顶部选择版本号之后用该键打开/保存拾色器。</p>
-
 <p><em>注意：</em>
 此按键同时可实现确定功能，即一键操作。
 Photoshop CS4 及其以前版本（最低至 Photoshop 6）在使用 前景拾色器快捷键时需满足以下条件：</p>
 <ul>
-  <li>前景色处于可点击状态（非全屏模式）</li>
-  <li>使用画笔工具或铅笔工具</li>
-  <li>使用系统默认主题</li>
+<li>前景色处于可点击状态（非全屏模式）</li>
+<li>使用画笔工具或铅笔工具</li>
+<li>使用系统默认主题</li>
 </ul>
-
-<p>如在非系统默认主题（即经典主题或任何自定义）下不能使用前景拾色器快捷键功能，请选择以下方法之一解决：
- # 修改界面颜色——项目“三维物体”——颜色选第五行第一个或在“其他”中选择 色调34/饱和度83/亮度213（红236/绿233/蓝216）</p>
+<p>如在非系统默认主题（即经典主题或任何自定义）下不能使用前景拾色器快捷键功能，请选择以下方法之一解决：</p>
 <ul>
-  <li>XP用户：桌面右键菜单——属性——外观——高级——项目“三维物体”</li>
-  <li>Windows 7 用户：控制面板——外观和个性化 ——更改半透明窗口颜色——高级外观设置——项目“三维物体”
- # 至 <em>Data\Imagesearch*PS版本号*</em> 目录下修改对应版本的参考图片并以 PNG 格式替换。</li>
+<li>修改界面颜色——项目 “三维物体”——颜色选第五行第一个或在“其他” 中选择 色调 34 / 饱和度 83 / 亮度 213（红 236 / 绿 233 / 蓝 216）</li>
+<li>Windows XP 用户：桌面右键菜单——属性——外观——高级——项目 “三维物体”</li>
+<li>Windows 7 用户：控制面板——外观和个性化 ——更改半透明窗口颜色——高级外观设置——项目 “三维物体”</li>
+<li> 至 <em>Data\Imagesearch\<strong>PS 版本号</strong></em> 目录下修改对应版本的参考图片并以 PNG 格式替换。</li>
 </ul>
-
-<h3 id="3前景拾色器映射为-alt">3.前景拾色器映射为 Alt</h3>
-
-<p>此功能可将拾色器与 Alt 取色合并，使用 Photoshop CS5 以前版本的拾色器触发方式。
-<em>与“禁用 Alt 菜单键”冲突。</em></p>
-<h3 id="4前景拾色器映射-alt">4.前景拾色器映射 Alt</h3>
-<p>仅 Photoshop CS5 及以上版本可见，需要输入 Photoshop CS5 以上版本内设置的拾色器快捷键。<em>此功能与“禁用 Alt 菜单键”冲突。</em></p>
-
-<h3 id="5修改笔刷范围">5.修改笔刷范围</h3>
+<h5 id="3前景拾色器映射为-alt">3.前景拾色器映射为 Alt</h5>
+<p>此功能可将拾色器与 Alt 取色合并，使用 Photoshop CS5 以前版本的拾色器触发方式。</p>
+<p>*<em>与 “禁用 Alt 菜单键” 冲突。</em></p>
+<h5 id="4前景拾色器映射-alt">4.前景拾色器映射 Alt</h5>
+<p>仅 Photoshop CS5 及以上版本可见，需要输入 Photoshop CS5 以上版本内设置的拾色器快捷键。</p>
+<p>*<em>与 “禁用 Alt 菜单键” 冲突。</em></p>
+<h5 id="5修改笔刷范围">5.修改笔刷范围</h5>
 <p>此功能仅用于 Photoshop CS4 及以上版本，将 Alt+右键 合并以达到模拟3D软件相关功能的效果。</p>
-
-<h3 id="6快速创建新图层">6.快速创建新图层</h3>
-<p>快捷键创建新图层（Alt+Shift+Ctrl+N）而无需确认。</p>
-
-<h3 id="7修改撤销重做快捷键">7.修改撤销/重做快捷键</h3>
+<h5 id="6快速创建新图层">6.快速创建新图层</h5>
+<p>一键创建新图层（官方快捷键：Alt+Shift+Ctrl+N）而无需确认。</p>
+<h5 id="7修改撤销重做快捷键">7.修改撤销/重做快捷键</h5>
 <p>此功能为方便经常重装并习惯改键的用户设计，将默认的4个快捷键循环更换如下：</p>
-
 <table>
-  <thead>
-    <tr>
-      <th style="text-align: center"><em>功能</em></th>
-      <th style="text-align: center"><em>修改前</em></th>
-      <th style="text-align: center"><em>修改后</em></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td style="text-align: center">后退一步</td>
-      <td style="text-align: center">Alt+Ctrl+z</td>
-      <td style="text-align: center">Ctrl+z</td>
-    </tr>
-    <tr>
-      <td style="text-align: center">校样颜色</td>
-      <td style="text-align: center">Ctrl+y</td>
-      <td style="text-align: center">Alt+Ctrl+z</td>
-    </tr>
-    <tr>
-      <td style="text-align: center">前进一步</td>
-      <td style="text-align: center">Shift+Ctrl+z</td>
-      <td style="text-align: center">Ctrl+y</td>
-    </tr>
-    <tr>
-      <td style="text-align: center">还原/重做</td>
-      <td style="text-align: center">Ctrl+z</td>
-      <td style="text-align: center">Shift+Ctrl+z</td>
-    </tr>
-  </tbody>
+<thead>
+<tr>
+<th style="text-align:center;"><em>功能</em></th>
+<th style="text-align:center;"><em>修改前</em></th>
+<th style="text-align:center;"><em>修改后</em></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center;">后退一步</td>
+<td style="text-align:center;"> Alt+Ctrl+Z</td>
+<td style="text-align:center;">Ctrl+Z</td>
+</tr>
+<tr>
+<td style="text-align:center;"> 还原 / 重做</td>
+<td style="text-align:center;"> Ctrl+Z</td>
+<td style="text-align:center;">Shift+Ctrl+Z</td>
+</tr>
+<tr>
+<td style="text-align:center;"> 前进一步</td>
+<td style="text-align:center;"> Shift+Ctrl+Z</td>
+<td style="text-align:center;">Ctrl+Y</td>
+</tr>
+<tr>
+<td style="text-align:center;"> 校样颜色</td>
+<td style="text-align:center;"> Ctrl+Y</td>
+<td style="text-align:center;">Alt+Ctrl+Z</td>
+</tr>
+</tbody>
 </table>
-
-<h3 id="8自动保存">8.自动保存</h3>
-<p>可选定时提醒及定时静默保存，可关闭。</p>
-
-<h3 id="9自动双击托盘启动-photoshop">9.自动/双击托盘启动 Photoshop</h3>
-<p>目前仅支持 Photoshop CS5（包括 64位），其他版本待测试。</p>
-
-<h3 id="10禁用-alt-菜单键">10.禁用 Alt 菜单键</h3>
-<p>防止单击 Alt 触发菜单。</p>
-
-<h3 id="11锁定为英文输入法">11.锁定为英文输入法</h3>
-<p>此功能针对亚洲用户设计，防止输入法导致快捷键冲突。</p>
-
-<h3 id="12关闭帮助提示">12.关闭帮助提示</h3>
+<h5 id="8自动保存">8.自动保存</h5>
+<p>可选定时提醒及定时静默保存，可关闭。
+保存时间过久的文件建议将保存间隔调大。</p>
+<h5 id="9自动启动-photoshop">9.自动启动 Photoshop</h5>
+<p>设置启动 Apssistant 时自动运行 Photoshop。</p>
+<p>*<em>目前仅支持 Photoshop CS5+（包括 32 位），其他版本待测试。</em></p>
+<h5 id="10禁用-alt-菜单键">10.禁用 Alt 菜单键</h5>
+<p>防止单击 Alt 触发菜单，同时对 Illustrator 生效</p>
+<p>*<em>不支持数位板扩展键</em></p>
+<h5 id="11锁定为英文输入法">11.锁定为英文输入法</h5>
+<p>此功能针对亚洲用户设计，防止输入法导致快捷键冲突。
+可在系统托盘菜单中开关。</p>
+<h5 id="12关闭帮助提示">12.关闭帮助提示</h5>
 <p>本软件部分功能有托盘提示，可在此处关闭。</p>
-
-<p>##注意事项</p>
+<h4 id="注意事项">注意事项</h4>
 <ul>
-  <li>本软件部分功能仍有缺陷，请尽量使用正确的操作方式，例如在套索工具状态下使用HUD拾色器容易造成假死</li>
-  <li>请毋连续使用快捷键，容易占用 CPU 过高导致 Photoshop 不稳定</li>
-  <li>某些软件可能导致本软件有严重的性能损失，请在使用本软件及 Photoshop 时禁用其 进程/服务。（如gdipp）</li>
-  <li>任何人均不会对本软件造成的任何不良后果承担责任</li>
-  <li>直接运行未经编译的脚本会有性能问题</li>
+<li>快捷键修改不支持数位板扩展键。</li>
+<li>套索工具状态下使用 HUD 拾色器可能导致假死。</li>
+<li>连续快速使用快捷键可能导致 Photoshop 不稳定。</li>
+<li>某些软件可能导致本软件有严重的性能损失，请在使用本软件及 Photoshop 时禁用其 进程 / 服务。（如 Gdipp、MacType）</li>
+<li>任何人均不会对本软件造成的任何不良后果承担责任</li>
+<li>直接运行未经编译的脚本会有性能问题</li>
 </ul>
-
 
       <footer class="site-footer">
         
