--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       
 		<a href="http://millionart.deviantart.com/art/Adobe-Photoshop-assistant-160950828" class="btn"><span>View on Deviantart</span></a>	 
 		
-		<a href="https://github.com/millionart/Apssistant/releases" class="btn"><span>Download .zip</span></a>
+		<a href="https://github.com/millionart/Apssistant/releases" class="btn"><span>Download<br />下载</span></a>
 
 
       
