--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <td style="text-align:center;">🤢</td>
 </tr>
 <tr>
-<td style="text-align:center;"><strong><a href="https://helpx.adobe.com/cn/photoshop/kb/enable-optional-extensions-photoshop-cc.html" title="按住 Ctrl 点击在新标签打开">可选扩展界面</a></strong></td>
+<td style="text-align:center;"><strong><a href="https://helpx.adobe.com/cn/photoshop/kb/enable-optional-extensions-photoshop-cc.html" title="" target="_blank">可选扩展界面</a></strong></td>
 <td style="text-align:center;">😃</td>
 <td style="text-align:center;">💀</td>
 <td style="text-align:center;">💀</td>
