使用本地 jQuery 库 完善快捷键设置验证 快捷键使用 CSS 控制大小写

--- a/source/Data/Config.html
+++ b/source/Data/Config.html
@@ -9,8 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/config.css" />
 	<link rel="stylesheet" type="text/css" href="css/chooselang.css" />
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="js/scrolloverflow.js"></script>
 	<script type="text/javascript" src="js/jquery.fullPage.js"></script>
 
